<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:gravity="center_vertical"
    android:padding="4dp">

    <TextView
        android:id="@+id/columnNameView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:textSize="14sp" />

    <CheckBox
        android:id="@+id/columnRequiredCheck"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_note_column_required" />

    <Button
        android:id="@+id/renameColumnButton"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/action_rename"
        android:textSize="10sp" />

    <Button
        android:id="@+id/deleteColumnButton"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/action_delete"
        android:textSize="10sp" />

</LinearLayout>
